New SQS Process to handle jobs for the site

--- a/sqs-processor/appsettings.json
+++ b/sqs-processor/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "FMPAPIKey": "35189ec3acb016ecbc2aef1cfb2a2c22"
+  "FMPAPIKey": "35189ec3acb016ecbc2aef1cfb2a2c22",
+  "MYSQLConnection": "server=financialservices.co3rrlmiycw5.us-east-2.rds.amazonaws.com;  port=3306; user=admin; password=EnvironmentPassword; database=securities;"
 }
