--- a/sqs-processor/sqs-processor.csproj
+++ b/sqs-processor/sqs-processor.csproj
@@ -17,5 +17,6 @@
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.1" />
+    <PackageReference Include="PuppeteerSharp" Version="6.1.0" />
   </ItemGroup>
 </Project>
