--- a/sqs-processor/sqs-processor.csproj
+++ b/sqs-processor/sqs-processor.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AWSSDK.SimpleNotificationService" Version="3.7.2.30" />
     <PackageReference Include="AWSSDK.SQS" Version="3.7.0.51" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.42" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
